Update swg event

--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -1,11 +1,11 @@
 ---
 layout: events-layout
-title: 56th Annual Southwestern Growers Golf Tournament
+title: 57th Annual Southwestern Growers Golf Tournament
 description: >-
-  Join us this year at our Annual Southwestern Growers Golf Tournament.
-image: /assets/images/2021-swg.jpg
-start_date: 2021-09-17
-end_date: 2021-09-19
+  Registration will opne May 2022.
+image: /assets/images/2021-swg.png
+start_date: 2022-09-23
+end_date: 2022-09-25
 contact:
   email: bkerr@bgcofcv.org
   name: Bridget Kerr
@@ -19,8 +19,8 @@ callToAction:
 time:
   endTime: Invalid date
   startTime: Invalid date
-location: Indian Wells Country Club
-address: "46000 Club Dr, Indian Wells, CA 92210"
+location: Bermuda Dunes Country Ckub
+address: "42-765 Adams St, Bermuda Dunes, CA 92203"
 show: true
 # sponsors:
 #     - category: Title Sponsor
