--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -19,7 +19,7 @@ callToAction:
 time:
   endTime: Invalid date
   startTime: Invalid date
-location: Bermuda Dunes Country Ckub
+location: Bermuda Dunes Country Club
 address: "42-765 Adams St, Bermuda Dunes, CA 92203"
 show: true
 # sponsors:
