--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -47,17 +47,8 @@ permalink: index.html
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <img src="/assets/images/holiday-charity-drive.png" class="img-fluid w-100" alt="Winners">
+                <img src="/assets/images/ask-letter.jpg" class="img-fluid w-100" alt="Ask Letter">
             </div>
-        </div>
-        <p class="text-center">To purchase entries, call us or complete the purchase form.</p>
-        <div class="d-flex justify-content-center">
-            <a class="btn bg-dark text-white" href="tel:1-760-836-1160">
-                Call Us!
-            </a>
-            <a class="btn btn-primary mx-1" href="/assets/holiday-charity-drive-form.pdf" target="_blank">
-                Download Form
-            </a>
         </div>
     </div>
 </section>
