Add swg info flyer

--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -120,6 +120,9 @@ hideTitle: true
 <section class="container">
   <div class="row">
     <div class="col-sm-12">
+      <img class="img-fluid w-100" src="/assets/images/2022-swg-information.jpg" />
+    </div>
+    <div class="col-sm-12">
       <img class="img-fluid w-100" src="/assets/images/winners-1.png" />
     </div>
     <div class="col-sm-12">
