Update auction event with covid flyer

--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -25,13 +25,19 @@ permalink: /events/the-grandest-auction-2022
 
 <section class="row">
   <div class="container">
-    <div class="col-sm-12">
+    <div class="col-sm-12 pb-5">
 
-      <p>5 PM Silent Auction, Hosted Cocktails & Hors d’oeuvres</p>
+      <p class="text-center">5 PM Silent Auction, Hosted Cocktails & Hors d’oeuvres</p>
 
-      <p>6:30 PM Dinner & Live Auction</p>
+      <p class="text-center">6:30 PM Dinner & Live Auction</p>
 
-      <h3><b>Tickets go on sale December 1<sup>st</sup></b></h3>
+      <h3 class="text-center"><b>Tickets go on sale December 1<sup>st</sup></b></h3>
+    </div>
+    <div class="col-sm-12 d-flex justify-content-center">
+      <img
+        class="img-fluid"
+        src="/assets/images/auction-safety.png"
+      />
     </div>
     <div class="col-sm-12">
       <img
@@ -39,6 +45,7 @@ permalink: /events/the-grandest-auction-2022
         src="/assets/images/auction-flyer.jpg"
       />
     </div>
+
   </div>
 </section>
 {% comment %}
