--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -47,6 +47,15 @@ permalink: index.html
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
+                <img src="/assets/images/notice.png" class="img-fluid w-100" alt="Phone Service Outage">
+            </div>
+        </div>
+    </div>
+</section>
+<section class="py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
                 <img src="/assets/images/contour-dermatology.jpg" class="img-fluid w-100" alt="Contour Dermatology">
             </div>
             <div class="col-sm-12">
