Update auction event details

--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -47,31 +47,9 @@ permalink: index.html
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <img src="/assets/images/notice.png" class="img-fluid w-100" alt="Phone Service Outage">
-            </div>
-        </div>
-    </div>
-</section>
-<section class="py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <img src="/assets/images/contour-dermatology.jpg" class="img-fluid w-100" alt="Contour Dermatology">
-            </div>
-            <div class="col-sm-12">
-                <p class="pt-2 pb-1">Contour Dermatology invites you to a “Tuxes and Tiaras” Day of Beauty event benefiting the Boys &
-                    Girls Clubs of Coachella Valley. Let them crown you with sparkling beauty treatments at their best
-                    prices of the year. From Botox and fillers to lasers and radiofrequency devices and CoolSculpting,
-                    they've got dozens of ways to keep you looking your best at any age. February 28 – March 4 —
-                    Schedule an in-person or telemedicine consultation to discuss your beauty needs and wants, and
-                    you’ll receive the same great Day of Beauty prizes as the in-person event. Saturday, March 5 is a
-                    limited RSVP in-person event at the Rancho Mirage office located at 42600 Mirage Road from 9 a.m. to
-                    1 p.m. Enjoy hors d’oeuvres, great price specials and watch exciting live demos. Reservations are
-                    required. RSVP to (760) 423-4000. </p>
-                    <div class="d-flex justify-content-center"><a href="https://contourderm.com/day-of-beauty-saturday-march-5-2022/" target="_blank" rel="noopener"
-                    role="button"
-                    class="shadow btn btn-secondary text-white btn-lg">RSVP</a></div>
-                
+                <a href="https://www.photosbylani.com/2022-All-Photos/Boys-Girls-Club-of-Coachella-Valley-31222/" target="_blank" rel="noopener noreferrer">
+                <img src="/assets/images/grand-auction-thanks.png" class="img-fluid w-100" alt="Grand Auction 2022 Pictures">
+            </a>
             </div>
         </div>
     </div>
