--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -3,8 +3,8 @@ layout: events-layout
 title: The Grandest Auction 2022
 description: Save the Date!
 image: /assets/images/auction-thumbnail.png
-start_date: 2022-03-12
-end_date: ""
+start_date: null
+end_date: null
 contact:
   email: bkerr@bgcofcv.org
   name: Bridget Kerr
@@ -26,26 +26,22 @@ permalink: /events/the-grandest-auction-2022
 <section class="row">
   <div class="container">
     <div class="col-sm-12 pb-5">
-
-      <p class="text-center">5 PM Silent Auction, Hosted Cocktails & Hors d’oeuvres</p>
+      <p class="text-center">
+        5 PM Silent Auction, Hosted Cocktails & Hors d’oeuvres
+      </p>
 
       <p class="text-center">6:30 PM Dinner & Live Auction</p>
 
-      <h3 class="text-center"><b>Tickets go on sale December 1<sup>st</sup></b></h3>
+      <h3 class="text-center">
+        <b>Tickets go on sale December 1<sup>st</sup></b>
+      </h3>
     </div>
     <div class="col-sm-12 d-flex justify-content-center">
-      <img
-        class="img-fluid"
-        src="/assets/images/auction-safety.png"
-      />
+      <img class="img-fluid" src="/assets/images/auction-safety.png" />
     </div>
     <div class="col-sm-12">
-      <img
-        class="img-fluid"
-        src="/assets/images/auction-flyer.jpg"
-      />
+      <img class="img-fluid" src="/assets/images/auction-flyer.jpg" />
     </div>
-
   </div>
 </section>
 {% comment %}
