--- a/root/jekyll/_pages/events.html
+++ b/root/jekyll/_pages/events.html
@@ -92,11 +92,11 @@ permalink: events.html
             <div class="pt-2 d-flex justify-content-center">
               {% if nextEvent.url contains "grandest-auction" %}
               <a
-                href="https://secure.maestroweb.com/default.aspx?OrgID=1648"
+                href="https://www.photosbylani.com/2022-All-Photos/Boys-Girls-Club-of-Coachella-Valley-31222/"
                 class="btn-lg btn-secondary btn text-uppercase"
                 target="_blank"
                 rel="noopener"
-                >View More</a
+                >View Photos</a
               >
               {% else %}
               <a
@@ -152,17 +152,21 @@ permalink: events.html
               {% endif %}
             </div>
             <div class="d-flex justify-content-center">
-              {% if event.url contains "car-drawing" %}
-              <a href="#" class="btn disabled btn-secondary text-uppercase mt-2"
-                >Sold Out</a
+              {% if event.url contains "grandest-auction" %}
+              <a
+                href="https://www.photosbylani.com/2022-All-Photos/Boys-Girls-Club-of-Coachella-Valley-31222/"
+                class="btn btn-secondary text-uppercase mt-2 stretched-link"
+                target="_blank"
+                rel="noopener"
+                >View Photos</a
               >
-              {%else%}
+              {% else %}
               <a
                 href="{{ event.url }}"
                 class="btn btn-secondary text-uppercase mt-2 stretched-link"
                 >View</a
               >
-              {%endif%}
+              {% endif %}
             </div>
           </div>
         </div>
