Update Team page

--- a/root/jekyll/_pages/team.html
+++ b/root/jekyll/_pages/team.html
@@ -115,9 +115,7 @@ permalink: team.html
                 </h2>
                 <div class="d-flex flex-sm-row flex-column justify-content-center py-3">
                     <a
-                        href="/assets/friends-update-september-2020.pdf"
-                        target="_blank"
-                        rel="noopener"
+                        href="/be-in-the-know"
                         class="my-1 mx-0 mx-sm-2 btn btn-secondary btn-lg text-uppercase"
                         >Be in the Know</a
                     >
