Update swg event

--- a/root/jekyll/_pages/events.html
+++ b/root/jekyll/_pages/events.html
@@ -102,13 +102,15 @@ permalink: events.html
               <a
                 href="{{ nextEvent.url }}"
                 class="btn-lg btn-secondary btn text-uppercase"
-                >View More</a
+                >More Info</a
               >
               {%endif%} {% if nextEvent.url contains "southern-growers" %}
               <a
-                href="/assets/2021-swg-pairings.pdf"
+                href="https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=60"
+                target="_blank"
+                rel="noopener"
                 class="btn-lg btn-dark btn text-uppercase ml-1"
-                >2021 SWG Pairings</a
+                >Register Here</a
               >
               {%endif%}
               <!-- TODO: remove after event -->
