--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -2,8 +2,8 @@
 layout: events-layout
 title: 57th Annual Southwestern Growers Golf Tournament
 description: >-
-  Registration will opne May 2022.
-image: /assets/images/2021-swg.png
+  Registration now open!
+image: /assets/images/2022-swg.png
 start_date: 2022-09-23
 end_date: 2022-09-25
 contact:
@@ -14,8 +14,8 @@ contact:
     number: (760) 836-1160
   title: Director of Special Events
 callToAction:
-  text: 2021 SWG Flight Winners
-  url: "/assets/2021-swg-winners.pdf"
+  text: Register Here
+  url: "https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=60"
 time:
   endTime: Invalid date
   startTime: Invalid date
@@ -120,7 +120,10 @@ hideTitle: true
 <section class="container">
   <div class="row">
     <div class="col-sm-12">
-      <img class="img-fluid w-100" src="/assets/images/2022-swg-information.jpg" />
+      <img
+        class="img-fluid w-100"
+        src="/assets/images/2022-swg-information.jpg"
+      />
     </div>
     <div class="col-sm-12">
       <img class="img-fluid w-100" src="/assets/images/winners-1.png" />
