--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -47,6 +47,17 @@ permalink: index.html
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
+                <img src="/assets/images/tony-reagins-golf-tournament-2022.png" class="img-fluid w-100" alt="Grand Auction 2022 Pictures">
+            </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
                 <a href="https://www.photosbylani.com/2022-All-Photos/Boys-Girls-Club-of-Coachella-Valley-31222/" target="_blank" rel="noopener noreferrer">
                 <img src="/assets/images/grand-auction-thanks.png" class="img-fluid w-100" alt="Grand Auction 2022 Pictures">
             </a>
