--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -1,8 +1,8 @@
 ---
 layout: events-layout
 title: 57th Annual Southwestern Growers Golf Tournament
-description: >-
-  Registration now open!
+# description: >-
+#  Registration now open!
 image: /assets/images/2022-swg.png
 start_date: 2022-09-23
 end_date: 2022-09-25
@@ -13,9 +13,9 @@ contact:
     extension: "105"
     number: (760) 836-1160
   title: Director of Special Events
-callToAction:
-  text: Register Here
-  url: "https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=60"
+#callToAction:
+#  text: Register Here
+#  url: "https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=60"
 time:
   endTime: Invalid date
   startTime: Invalid date
@@ -118,6 +118,9 @@ hideTitle: true
 ---
 
 <section class="container">
+  <p class="h1 text-center font-weight-bold" style="text-decoration: underline">
+    SOLD OUT!
+  </p>
   <div class="row">
     <div class="col-sm-12">
       <img
