--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -3,7 +3,7 @@ layout: events-layout
 title: 57th Annual Southwestern Growers Golf Tournament
 # description: >-
 #  Registration now open!
-image: /assets/images/2022-swg.png
+image: /assets/images/2022-swg-sold-out.png
 start_date: 2022-09-23
 end_date: 2022-09-25
 contact:
