Update home page

--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -61,6 +61,11 @@ permalink: index.html
                                 <p class="text-muted mb-4">May 24, 2022</p>
                                 <div class="p-2">
                                     <p>The Boys & Girls Clubs of Coachella Valley’s four locations are open to children between the ages of 7 and 18, Monday through Friday. Summer sessions begin in June and run through mid-August between the hours of 7:30 AM and 5:30 PM. FREE breakfast and lunch will be provided.</p>
+                                     <ul>
+                                        <li>Indio &amp; La Quinta &ndash; Monday, June 6</li>
+                                        <li>Mecca &amp; Coachella &ndash; Monday, June 13</li>
+            
+                                    </ul>
                                     <p>For more information, call the club your child is interested in attending:</p>
                                     <ul>
                                         <li>La Quinta &ndash; (760) 564-5555</li>
