Update home page

--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -44,6 +44,19 @@ permalink: index.html
     role="button" class="call-to-action shadow btn btn-secondary px-5 py-4 text-white btn-lg mx-auto">DONATE NOW</a>
 </section>
 <section class="py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+            <a href="{{ site.data.global.donateUrl }}"
+                target="_blank"
+                rel="noopener">
+                <img src="/assets/images/happy-holidays-2022.png" class="img-fluid w-100" alt="Happy Holidays">
+            </a>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="py-5">
     <div class="container d-flex justify-content-center">
         <div class="row">
             <div class="col-sm-12">
@@ -78,28 +91,6 @@ permalink: index.html
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <img src="/assets/images/tony-reagins-golf-tournament-2022.png" class="img-fluid w-100" alt="Grand Auction 2022 Pictures">
-            </a>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <a href="https://www.photosbylani.com/2022-All-Photos/Boys-Girls-Club-of-Coachella-Valley-31222/" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/images/grand-auction-thanks.png" class="img-fluid w-100" alt="Grand Auction 2022 Pictures">
-            </a>
             </div>
         </div>
     </div>
