--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -1,11 +1,12 @@
 ---
 layout: events-layout
-title: 57th Annual Southwestern Growers Golf Tournament
+title: Southwestern Growers Golf Tournament
 # description: >-
 #  Registration now open!
-image: /assets/images/2022-swg-sold-out.png
-start_date: 2022-09-23
-end_date: 2022-09-25
+image: /assets/images/swg-2023.png
+shortDate: true
+start_date: 2023-09-23
+end_date: null
 contact:
   email: bkerr@bgcofcv.org
   name: Bridget Kerr
@@ -118,16 +119,15 @@ hideTitle: true
 ---
 
 <section class="container">
-  <p class="h1 text-center font-weight-bold" style="text-decoration: underline">
-    SOLD OUT!
-  </p>
   <div class="row">
+    {%- comment -%}
     <div class="col-sm-12">
       <img
         class="img-fluid w-100"
         src="/assets/images/2022-swg-information.jpg"
       />
     </div>
+    {%- endcomment -%}
     <div class="col-sm-12">
       <img class="img-fluid w-100" src="/assets/images/winners-1.png" />
     </div>
