--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -1,9 +1,9 @@
 ---
 layout: events-layout
-title: The Grandest Auction 2022
+title: Grand Auction 2023
 description: Save the Date!
-image: /assets/images/auction-thumbnail.png
-start_date: null
+image: /assets/images/grand-auction-2023.png
+start_date: 2023-03-11
 end_date: null
 contact:
   email: bkerr@bgcofcv.org
@@ -12,15 +12,15 @@ contact:
     extension: 105
     number: (760)-836-1160
   title: Director of Special Events
-callToAction:
-  text: Purchase Tickets & Tables
-  url: https://secure.maestroweb.com/Default.aspx?OrgID=1648
+#callToAction:
+#  text: Purchase Tickets & Tables
+#  url: https://secure.maestroweb.com/Default.aspx?OrgID=1648
 time: null
 location: Hyatt Regency Indian Wells Resort & Spa
 address: null
 show: true
 isActive: true
-permalink: /events/the-grandest-auction-2022
+permalink: /events/grand-auction-2023
 ---
 
 <section class="row">
@@ -33,14 +33,8 @@ permalink: /events/the-grandest-auction-2022
       <p class="text-center">6:30 PM Dinner & Live Auction</p>
 
       <h3 class="text-center">
-        <b>Tickets go on sale December 1<sup>st</sup></b>
+        <b>Tickets go on sale December 1<sup>st</sup>, 2022</b>
       </h3>
-    </div>
-    <div class="col-sm-12 d-flex justify-content-center">
-      <img class="img-fluid" src="/assets/images/auction-safety.png" />
-    </div>
-    <div class="col-sm-12">
-      <img class="img-fluid" src="/assets/images/auction-flyer.jpg" />
     </div>
   </div>
 </section>
