--- a/root/jekyll/_pages/events.html
+++ b/root/jekyll/_pages/events.html
@@ -74,11 +74,16 @@ permalink: events.html
               "}}
             </h5>
             <div class="d-flex justify-content-center align-items-center">
+              {% if nextEvent.shortDate %}
+              <p class="text-muted my-1">
+                {{ nextEvent.start_date | date: "%b %Y" }}
+              </p>
+              {% else %}
               <p class="text-muted my-1">
                 {{ nextEvent.start_date | date: "%a, %b %d, %Y" }}
               </p>
-              {% if nextEvent.end_date and nextEvent.end_date != "" and
-              nextEvent.end_date != "Invalid date" %} &nbsp; &ndash; &nbsp;
+              {% endif %} {% if nextEvent.end_date and nextEvent.end_date != ""
+              and nextEvent.end_date != "Invalid date" %} &nbsp; &ndash; &nbsp;
               <p class="text-muted my-1">
                 {{ nextEvent.end_date | date: "%a, %b %d, %Y" }}
               </p>
@@ -137,11 +142,16 @@ permalink: events.html
             <h5 class="card-title text-secondary">{{ event.title }}</h5>
             <div>
               <div class="d-flex justify-content-center align-items-center">
+                {% if event.shortDate %}
+                <p class="text-muted my-1">
+                  {{ event.start_date | date: "%b %Y" }}
+                </p>
+                {% else %}
                 <p class="text-muted my-1">
                   {{ event.start_date | date: "%a, %b %d, %Y" }}
                 </p>
-                {% if event.end_date and event.end_date != "" %} &nbsp; &ndash;
-                &nbsp;
+                {% endif %} {% if event.end_date and event.end_date != "" %}
+                &nbsp; &ndash; &nbsp;
                 <p class="text-muted my-1">
                   {{ event.end_date | date: "%a, %b %d, %Y" }}
                 </p>
