--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -43,19 +43,7 @@ permalink: index.html
     rel="noopener"
     role="button" class="call-to-action shadow btn btn-secondary px-5 py-4 text-white btn-lg mx-auto">DONATE NOW</a>
 </section>
-<section class="py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-            <a href="{{ site.data.global.donateUrl }}"
-                target="_blank"
-                rel="noopener">
-                <img src="/assets/images/happy-holidays-2022.png" class="img-fluid w-100" alt="Happy Holidays">
-            </a>
-            </div>
-        </div>
-    </div>
-</section>
+
 <section class="py-5">
     <div class="container d-flex justify-content-center">
         <div class="row">
@@ -71,14 +59,8 @@ permalink: index.html
                         <div class="col-md-6 p-0">
                             <div class="card-body d-flex flex-column align-items-center h-100">
                                 <p class="h2 font-weight-bold text-center m-0">Update</p>
-                                <p class="text-muted mb-4">May 24, 2022</p>
                                 <div class="p-2">
-                                    <p>The Boys & Girls Clubs of Coachella Valley’s four locations are open to children between the ages of 7 and 18, Monday through Friday. Summer sessions begin in June and run through mid-August between the hours of 7:30 AM and 5:30 PM. FREE breakfast and lunch will be provided.</p>
-                                     <ul>
-                                        <li>Indio &amp; La Quinta &ndash; Monday, June 6</li>
-                                        <li>Mecca &amp; Coachella &ndash; Monday, June 13</li>
-            
-                                    </ul>
+                                    <p>The Boys & Girls Clubs of Coachella Valley’s four locations are open to children between the ages of 7 and 18, Monday through Friday.</p>
                                     <p>For more information, call the club your child is interested in attending:</p>
                                     <ul>
                                         <li>La Quinta &ndash; (760) 564-5555</li>
