Update auction cta text

--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -13,7 +13,7 @@ contact:
     number: (760)-836-1160
   title: Director of Special Events
 callToAction:
-  text: Purchase Tickets & Tables
+  text: Purchase Tickets & Tables and View Auction Items
   url: https://secure.maestroweb.com/Default.aspx?OrgID=1648
 time: null
 location: Hyatt Regency Indian Wells Resort & Spa
