--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -19,7 +19,7 @@ time: null
 location: Hyatt Regency Indian Wells Resort & Spa
 address: null
 show: true
-isActive: true
+isActive: false
 permalink: /events/grand-auction-2023
 ---
 
