--- a/root/jekyll/_events/tony-reagins-golf-tournament.html
+++ b/root/jekyll/_events/tony-reagins-golf-tournament.html
@@ -42,8 +42,11 @@ show: true
     class="btn btn-primary"
     >Print Here</a
   >
-  <p><strong>Date:</strong> May 5th, 2024</p>
-  <p><strong>Location:</strong> Woodhaven Country Club</p>
+  <p><strong>Date:</strong> May 5th, 2023</p>
+  <p>
+    <strong>Location:</strong> Woodhaven Country Club - 41555 Woodhaven Dr E,
+    Palm Desert, CA 92211
+  </p>
   <p><strong>Time:</strong></p>
   <ul>
     <li>8:30 am Registration &amp; Continental Breakfast</li>
@@ -54,7 +57,9 @@ show: true
     <li>$100 per player</li>
     <li>$115 after April 15th</li>
   </ul>
-  <p>Includes: Polo Shirt &amp; Dinner</p>
+  <p>
+    Includes: Continental breakfast, Buffet following round, &amp; Polo shirt
+  </p>
   <p><strong>GUEST DINNER PRICE</strong> $35 per person</p>
   <p><strong>Format:</strong> 4 Person Scramble</p>
   <p>
@@ -69,7 +74,7 @@ show: true
   </address>
   <p><strong>Contact:</strong></p>
   <ul>
-    <li>Stan Krause 760-702-1336</li>
     <li>Dave Ison 760-399-0950</li>
+    <li>Stan Krause 760-702-1336</li>
   </ul>
 </div>
