Update upcoming event info

--- a/root/jekyll/_events/tony-reagins-golf-tournament.html
+++ b/root/jekyll/_events/tony-reagins-golf-tournament.html
@@ -17,13 +17,13 @@ end_Date: null
 #     number: (760) 836-1160
 #   title: Director of Special Events
 contact:
-  name: Stan Krause
+  name: Dave Ison
   phone:
-    number: (760) 702-1336
-  title: Director of Special Events
+    number: (760) 399-0950
+# title: Director of Special Events
 callToAction:
   text: Register Now
-  url: https://app.eventcaddy.com/events/tony-reagins-alumni-golf-tournament-2023
+  url: https://app.eventcaddy.com/events/tony-reagins-alumni-golf-tournament-2023-1
 moreInformationLink: null
 time:
   endTime: null
