--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -4,9 +4,9 @@ title: Southwestern Growers Golf Tournament
 # description: >-
 #  Registration now open!
 image: /assets/images/swg-2023.png
-shortDate: true
-start_date: 2023-09-23
-end_date: null
+shortDate: false
+start_date: 2023-09-22
+end_date: 2023-09-24
 contact:
   email: bkerr@bgcofcv.org
   name: Bridget Kerr
@@ -14,9 +14,9 @@ contact:
     extension: "105"
     number: (760) 836-1160
   title: Director of Special Events
-#callToAction:
-#  text: Register Here
-#  url: "https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=60"
+callToAction:
+  text: Register Online
+  url: "https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=61"
 time:
   endTime: Invalid date
   startTime: Invalid date
@@ -120,59 +120,43 @@ hideTitle: true
 
 <section class="container">
   <div class="row">
-    {%- comment -%}
     <div class="col-sm-12">
-      <img
-        class="img-fluid w-100"
-        src="/assets/images/2022-swg-information.jpg"
-      />
-    </div>
-    {%- endcomment -%}
-    <div class="col-sm-12">
-      <img class="img-fluid w-100" src="/assets/images/winners-1.png" />
-    </div>
-    <div class="col-sm-12">
-      <img class="img-fluid w-100" src="/assets/images/winners-2.png" />
-    </div>
-    <div class="col-sm-12">
-      <img class="img-fluid w-100" src="/assets/images/winners-3.png" />
-    </div>
-  </div>
-</section>
-
-{%- comment -%}
-<section class="container">
-  <div class="row">
-    <div class="col-sm-12">
+      {%- comment -%}
       <h4 class="text-center mb-4">
         To inquire about registration please call
         <a href="tel:1-760-836-1160">(760)-836-1160</a>
       </h4>
+      {%- endcomment -%}
       <p class="text-center">
         Optional practice round for tournament participants Thursday, September
-        16, 2021
+        21, 2023
       </p>
     </div>
     <div class="col-sm-12">
+      {%- comment -%}
       <img
         class="img-fluid w-100"
         src="/assets/images/swg-2021-save-the-date.jpg"
       />
+      {%- endcomment -%}
       <div class="d-flex justify-content-around pt-3 pb-5">
         <a
-          class="btn btn-primary mx-1 text-uppercase"
-          href="/assets/2021-SWG-Entry-Form.pdf"
+          class="btn btn-primary btn-lg mx-1 text-uppercase"
+          href="/assets/2023-SWG-Entry-Form.pdf"
           target="_blank"
-          >Download Form</a
+          >Download Registration Form</a
         >
+        {%- comment -%}
         <a
           class="btn btn-primary mx-1 text-uppercase"
           href="https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=59"
           target="_blank"
           >Register Online</a
         >
+        {%- endcomment -%}
       </div>
     </div>
+    {%- comment -%}
     <div class="col-sm-12">
       <img
         class="img-fluid w-100"
@@ -182,6 +166,24 @@ hideTitle: true
     <div class="col-sm-12">
       <img class="img-fluid w-100" src="/assets/images/Loyal_Sponsors.jpg" />
     </div>
+    {%- endcomment -%}
   </div>
 </section>
-{%- endcomment -%}
+<section class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <img class="img-fluid w-100" src="/assets/images/swg-2023-info.png" />
+    </div>
+    {%- comment -%}
+    <div class="col-sm-12">
+      <img class="img-fluid w-100" src="/assets/images/winners-1.png" />
+    </div>
+    <div class="col-sm-12">
+      <img class="img-fluid w-100" src="/assets/images/winners-2.png" />
+    </div>
+    <div class="col-sm-12">
+      <img class="img-fluid w-100" src="/assets/images/winners-3.png" />
+    </div>
+    {%- endcomment -%}
+  </div>
+</section>
