--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -43,7 +43,15 @@ permalink: index.html
     rel="noopener"
     role="button" class="call-to-action shadow btn btn-secondary px-5 py-4 text-white btn-lg mx-auto">DONATE NOW</a>
 </section>
-
+<section class="container py-5">
+  <div class="row">
+    <div class="col-sm-12">
+        <a href="https://square.link/u/3H9ymRAB" target="_blank">
+      <img class="img-fluid w-100" src="/assets/images/indpendence-from-hunger-ad.jpg" />
+      </a>
+    </div>
+    </div>
+</section>
 <section class="py-5">
     <div class="container d-flex justify-content-center">
         <div class="row">
