--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -46,8 +46,8 @@ permalink: index.html
 <section class="container py-5">
   <div class="row">
     <div class="col-sm-12">
-        <a href="https://square.link/u/3H9ymRAB" target="_blank">
-      <img class="img-fluid w-100" src="/assets/images/indpendence-from-hunger-ad.jpg" />
+        <a href="/car-ticket-purchase-2023.pdf" target="_blank">
+      <img class="img-fluid w-100" src="/assets/images/car-drawing-2023.png" />
       </a>
     </div>
     </div>
@@ -123,9 +123,39 @@ permalink: index.html
             </div>
             <div class="col-sm-12">
             <blockquote class="blockquote text-center">
-            <p class="pb-3">To save and enhance the lives of the young people of our community, especially those with
-    economic and/or social needs by offering a safe haven and meaningful youth development
-    services provided by a caring and qualified staff</p>
+            <p class="pb-3">To save and enhance the lives of the young people of our community.</p>
+            </blockquote>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="py-5">
+    <div class="container">
+         <div class="row">
+            <div class="col-sm-12">
+                <h1 class="text-center">Our Vision</h1>
+            </div>
+            <div class="col-sm-12">
+            <blockquote class="blockquote text-center">
+            <p class="pb-3">To provide hope and opportunity to every young person within our reach so they can achieve their full potential.</p>
+            </blockquote>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="py-5">
+    <div class="container">
+         <div class="row">
+            <div class="col-sm-12">
+                <h1 class="text-center">Core Beliefs</h1>
+            </div>
+            <div class="col-sm-12">
+            <blockquote class="blockquote text-center">
+            <p class="pb-3">A safe place to learn and grow that promotes respect and integrity.</p>
+            <p class="pb-3">Quality and innovative programs of the highest standards.</p>
+            <p class="pb-3">Ongoing relationships with caring, professional staff and volunteers.</p>
+            <p class="pb-3">An organization driven by its mission and vision.</p>
+            <p class="pb-3">Hope and opportunity.</p>
             </blockquote>
             </div>
         </div>
