Add hotel avaialability link

--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -139,13 +139,23 @@ hideTitle: true
         src="/assets/images/swg-2021-save-the-date.jpg"
       />
       {%- endcomment -%}
-      <div class="d-flex justify-content-around pt-3 pb-5">
-        <a
-          class="btn btn-primary btn-lg mx-1 text-uppercase"
-          href="/assets/2023-SWG-Entry-Form.pdf"
-          target="_blank"
-          >Download Registration Form</a
-        >
+      <div class="row pt-3 pb-5">
+        <div class="col-sm-12 col-md-6">
+          <a
+            class="btn btn-primary btn-lg mx-1 text-uppercase my-1 w-100"
+            href="/assets/2023-SWG-Entry-Form.pdf"
+            target="_blank"
+            >Download Registration Form</a
+          >
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <a
+            class="btn btn-light btn-lg mx-1 text-uppercase my-1 w-100"
+            href="https://reservations.arestravel.com/hotel/list/18243?Search%5BhotelRegion%5D=i6692&Search%5BcheckInDate%5D=09%2F21%2F2023&Search%5BcheckOutDate%5D=09%2F25%2F2023&Search%5BroomOccupancies%5D%5B0%5D%5BnumberOfAdults%5D=1&Search%5BroomOccupancies%5D%5B0%5D%5BnumberOfChildren%5D=0&Search%5BkeywordSearch%5D=&Search%5Bsort%5D=&Search%5BstarRating%5D=&Search%5BlowPrice%5D=&Search%5BhighPrice%5D=&Search%5Bsearch%5D=&customNavLink=0&Search%5Bnear%5D=&Search%5Blatitude%5D=&Search%5Blongitude%5D=&Search%5BlocationSearch%5D=&Search%5BpoiDistance%5D=10"
+            target="_blank"
+            >Check Hotel Availability</a
+          >
+        </div>
         {%- comment -%}
         <a
           class="btn btn-primary mx-1 text-uppercase"
