--- a/root/jekyll/_pages/events.html
+++ b/root/jekyll/_pages/events.html
@@ -20,16 +20,23 @@ permalink: events.html
     <h1 class="text-center section-header underline">{{ page.title }}</h1>
     <div class="lead pt-3 px-3">{{ page.description | markdownify }}</div>
     <div class="d-flex py-2 justifu-content-center">
-      {%- comment -%} TODO: Add after auction event {%- endcomment -%} {%-
-      comment -%}
       <a
         class="btn btn-secondary text-uppercase"
         target="_blank"
         rel="noopener"
         href="{{ page.subscribeLink }}"
-        >Sign Up</a
+        >Join Here</a
       >
-      {%- endcomment -%}
+    </div>
+  </div>
+</section>
+<section class="container py-5">
+  <div class="row">
+    <div class="col-sm-12">
+      <img
+        class="img-fluid w-100"
+        src="/assets/images/save-the-dates-2023.png"
+      />
     </div>
   </div>
 </section>
