Update grand auction info

--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -1,9 +1,9 @@
 ---
 layout: events-layout
-title: Grand Auction 2023
+title: Grand Auction 2024
 description: Save the Date!
-image: /assets/images/grand-auction-2023.png
-start_date: 2023-03-11
+image: /assets/images/events/grand-auction-2024.png
+start_date: 2024-03-09
 end_date: null
 contact:
   email: bkerr@bgcofcv.org
@@ -13,14 +13,14 @@ contact:
     number: (760)-836-1160
   title: Director of Special Events
 callToAction:
-  text: Purchase Tickets & Tables and View Auction Items
+  text: Register Now
   url: https://secure.maestroweb.com/Default.aspx?OrgID=1648
 time: null
 location: Hyatt Regency Indian Wells Resort & Spa
 address: null
 show: true
 isActive: false
-permalink: /events/grand-auction-2023
+permalink: /events/grand-auction-2024
 ---
 
 <section class="row">
@@ -33,7 +33,8 @@ permalink: /events/grand-auction-2023
       <p class="text-center">6:30 PM Dinner & Live Auction</p>
 
       <h3 class="text-center">
-        <b>Tickets go on sale December 1<sup>st</sup>, 2022</b>
+        <b>Discounted Tickets & Tables on sale December 1<sup>st</sup></b>
+        &ndash; <b>January 31<sup>st</sup></b>
       </h3>
     </div>
   </div>
