--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -43,6 +43,16 @@ permalink: index.html
     rel="noopener"
     role="button" class="call-to-action shadow btn btn-secondary px-5 py-4 text-white btn-lg mx-auto">DONATE NOW</a>
 </section>
+<section class="container py-5">
+  <div class="row">
+    <div class="col-sm-12">
+      <img
+        class="img-fluid w-100"
+        src="/assets/images/events/save-the-date-grand-auction-2024.jpg"
+      />
+    </div>
+  </div>
+</section>
 <section class="py-5">
     <div class="container d-flex justify-content-center">
         <div class="row">
