--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -29,8 +29,7 @@ permalink: index.html
         <div style="height: calc(75vh - 77px)" class="position-absolute p-0 p-xl-3 d-flex flex-column align-items-center justify-content-between">
             {%- comment -%} <!-- <div class="d-flex flex-column justify-content-around align-items-center"> --> {%- endcomment -%}
                 <div>
-                    <h2 class="m-0 display-4 text-center text-white text-uppercase font-weight-bold">6,043</h2>
-                    <p class="h2 text-center text-white">Coachella Valley youth served annually</p>
+                    <p class="h2 text-center text-white">Thousands of Coachella Valley youth (and their families) served annually</p>
                 </div>
                 {%- comment -%} <!-- <h2 class="h1 text-center text-uppercase font-weight-bold text-white py-4"> 6,004 Coachella Valley youth served last year</h2> --> {%- endcomment -%}
                 <img class="hero-logo" src={{page.heroLogo | absolute_url}} width="250">
