--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -42,7 +42,7 @@ permalink: index.html
     rel="noopener"
     role="button" class="call-to-action shadow btn btn-secondary px-5 py-4 text-white btn-lg mx-auto">DONATE NOW</a>
 </section>
-<section class="container py-5">
+{%- comment -%}<section class="container py-5">
   <div class="row">
     <div class="col-sm-12">
       <img
@@ -51,7 +51,7 @@ permalink: index.html
       />
     </div>
   </div>
-</section>
+</section> {%- endcomment -%}
 <section class="py-5">
     <div class="container d-flex justify-content-center">
         <div class="row">
