--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -137,7 +137,7 @@ permalink: index.html
             </div>
             <div class="col-sm-12">
             <blockquote class="blockquote text-center">
-            <p class="pb-3">To provide hope and opportunity to every young person within our reach so they can achieve their full potential.</p>
+            <p class="pb-3">To provide opportunity and instill hope in all youth within our reach so they can achieve their full potential.</p>
             </blockquote>
             </div>
         </div>
