--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -3,10 +3,10 @@ layout: events-layout
 title: Southwestern Growers Golf Tournament
 # description: >-
 #  Registration now open!
-image: /assets/images/swg-2023.png
+image: /assets/images/swg-2024-save-the-date.png
 shortDate: false
-start_date: 2023-09-22
-end_date: 2023-09-24
+start_date: 2024-09-20
+end_date: 2024-09-22
 contact:
   email: bkerr@bgcofcv.org
   name: Bridget Kerr
@@ -14,9 +14,9 @@ contact:
     extension: "105"
     number: (760) 836-1160
   title: Director of Special Events
-callToAction:
-  text: Register Online
-  url: "https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=61"
+# callToAction:
+#  text: Register Online
+#  url: "https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=61"
 time:
   endTime: Invalid date
   startTime: Invalid date
@@ -129,7 +129,7 @@ hideTitle: true
       {%- endcomment -%}
       <p class="text-center">
         Optional practice round for tournament participants Thursday, September
-        21, 2023
+        19, 2024
       </p>
     </div>
     <div class="col-sm-12">
@@ -138,7 +138,7 @@ hideTitle: true
         class="img-fluid w-100"
         src="/assets/images/swg-2021-save-the-date.jpg"
       />
-      {%- endcomment -%}
+      {%- endcomment -%} {% comment %}
       <div class="row pt-3 pb-5">
         <div class="col-sm-12 col-md-6">
           <a
@@ -156,15 +156,14 @@ hideTitle: true
             >Check Hotel Availability</a
           >
         </div>
-        {%- comment -%}
         <a
           class="btn btn-primary mx-1 text-uppercase"
           href="https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=59"
           target="_blank"
           >Register Online</a
         >
-        {%- endcomment -%}
       </div>
+      {% endcomment %}
     </div>
     {%- comment -%}
     <div class="col-sm-12">
@@ -179,21 +178,12 @@ hideTitle: true
     {%- endcomment -%}
   </div>
 </section>
+{% comment %}
 <section class="container">
   <div class="row">
     <div class="col-sm-12">
       <img class="img-fluid w-100" src="/assets/images/swg-2023-info.png" />
     </div>
-    {%- comment -%}
-    <div class="col-sm-12">
-      <img class="img-fluid w-100" src="/assets/images/winners-1.png" />
-    </div>
-    <div class="col-sm-12">
-      <img class="img-fluid w-100" src="/assets/images/winners-2.png" />
-    </div>
-    <div class="col-sm-12">
-      <img class="img-fluid w-100" src="/assets/images/winners-3.png" />
-    </div>
-    {%- endcomment -%}
   </div>
 </section>
+{% endcomment %}
