--- a/root/jekyll/_events/tony-reagins-golf-tournament.html
+++ b/root/jekyll/_events/tony-reagins-golf-tournament.html
@@ -28,29 +28,32 @@ moreInformationLink: null
 time:
   endTime: null
   startTime: null
-location: Woodhaven Country Club
-address: "41555 Woodhaven Dr E, Palm Desert, CA 92211"
+location: Golf Club at Terra Lago
+address: "84000 Terra Lago Pkwy, Indio, CA 92203"
 show: true
 ---
 
 <div class="container">
   <h1>Event Information</h1>
-  <h4>Registration Form and Sponsorship information</h4>
-  <a
-    href="/assets/2023-tony-reagins-golf-touranament-registration.pdf"
-    target="_blank"
-    class="btn btn-primary"
-    >Print Here</a
-  >
-  <p><strong>Date:</strong> May 5th, 2023</p>
-  <p>
-    <strong>Location:</strong> Woodhaven Country Club - 41555 Woodhaven Dr E,
-    Palm Desert, CA 92211
+  <div class="my-3 display-flex flex-column">
+    <h4>Registration Form and Sponsorship information</h4>
+    <a
+      href="/assets/2024-tony-reagins-golf-touranament-registration.pdf"
+      target="_blank"
+      class="btn btn-primary"
+      >Print Here</a
+    >
+  </div>
+
+  <p class="text-uppercase font-weight-bold h2 my-5" style="color: red">
+    Sold Out
   </p>
+  <p><strong>Date:</strong> {{page.start_date | date: "%a, %b %d, %Y" }}</p>
+  <p><strong>Location:</strong> {{page.location}}, {{page.address}}</p>
   <p><strong>Time:</strong></p>
   <ul>
-    <li>8:30 am Registration &amp; Continental Breakfast</li>
-    <li>10:00 am Shotgun followed by Meal, Raffle &amp; Silent Auction</li>
+    <li>9:00 am Registration</li>
+    <li>10:00 am Shotgun followed lunch and mobile auction</li>
   </ul>
   <p><strong>Cost:</strong></p>
   <ul>
@@ -60,7 +63,7 @@ show: true
   <p>
     Includes: Continental breakfast, Buffet following round, &amp; Polo shirt
   </p>
-  <p><strong>GUEST DINNER PRICE</strong> $35 per person</p>
+  <p><strong>GUEST DINNER PRICE</strong> $50 per person</p>
   <p><strong>Format:</strong> 4 Person Scramble</p>
   <p>
     <strong>Register at:</strong>
