--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -1,9 +1,9 @@
 ---
 layout: events-layout
-title: Grand Auction 2024
+title: Grand Auction 2025
 description: Save the Date!
-image: /assets/images/grand-auction-2024.png
-start_date: 2024-03-09
+image: /assets/images/logo3.jpg
+start_date: 2025-04-08
 end_date: null
 contact:
   email: bkerr@bgcofcv.org
@@ -12,15 +12,15 @@ contact:
     extension: 105
     number: (760)-836-1160
   title: Director of Special Events
-callToAction:
-  text: Register Now
-  url: https://secure.maestroweb.com/Default.aspx?OrgID=1648
+# callToAction:
+#  text: Register Now
+#  url: https://secure.maestroweb.com/Default.aspx?OrgID=1648
 time: null
 location: Hyatt Regency Indian Wells Resort & Spa
 address: null
 show: true
 isActive: false
-permalink: /events/grand-auction-2024
+permalink: /events/grand-auction-2025
 ---
 
 <section class="row">
@@ -39,6 +39,7 @@ permalink: /events/grand-auction-2024
     </div>
   </div>
 </section>
+
 {% comment %}
 <section class="py-5">
   <div class="container">
@@ -121,7 +122,6 @@ permalink: /events/grand-auction-2024
     </div>
   </div>
 </section>
-{% endcomment %} {%- comment -%}
 <section class="py-5">
   <div class="container">
     <div class="row">
