--- a/root/jekyll/_pages/team.html
+++ b/root/jekyll/_pages/team.html
@@ -72,7 +72,7 @@ permalink: team.html
         </div>
     </div>
 </section>
-<section class="section py-5">
+{% comment %} <section class="section py-5">
     <div class="container">
         <h2 class="text-center section-header">Friends Board</h2>
         <div class="row">
@@ -88,8 +88,8 @@ permalink: team.html
             {% endfor %}
         </div>
     </div>
-</section>
-<section class="section py-5 bg-light">
+</section> {% endcomment %}
+{% comment %} <section class="section py-5 bg-light">
     <div class="container">
         <h2 class="text-center section-header">Emeritus</h2>
         <div class="row">
@@ -105,4 +105,4 @@ permalink: team.html
             {% endfor %}
         </div>
     </div>
-</section>
+</section> {% endcomment %}
