--- a/root/jekyll/_events/presidents-circle-reception.html
+++ b/root/jekyll/_events/presidents-circle-reception.html
@@ -23,7 +23,13 @@ address: null
 show: true
 ---
 
-<h2>2024 Holiday Reception Date TBD</h2>
+<section class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h2>2024 Holiday Reception Date TBD</h2>
+    </div>
+  </div>
+</section>
 
 {%- comment -%}
 <section class="container">
