Update swg event

--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -8,11 +8,11 @@ shortDate: false
 start_date: 2024-09-20
 end_date: 2024-09-22
 contact:
-  email: bkerr@bgcofcv.org
-  name: Bridget Kerr
-  phone:
-    extension: "105"
-    number: (760) 836-1160
+  email: SWGinvitational@gmail.com
+  # name: Bridget Kerr
+  # phone:
+  #  extension: "105"
+  #  number: (760) 836-1160
   title: Director of Special Events
 # callToAction:
 #  text: Register Online
@@ -127,9 +127,42 @@ hideTitle: true
         <a href="tel:1-760-836-1160">(760)-836-1160</a>
       </h4>
       {%- endcomment -%}
-      <p class="text-center">
-        Optional practice round for tournament participants Thursday, September
-        19, 2024
+
+      <div
+        class="d-flex flex-column flex-sm-row justify-content-center pb-5"
+        style="gap: 1rem"
+      >
+        <a
+          href="/assets/2024-swg-player-application-packet.pdf"
+          class="btn btn-dark"
+          target="_blank"
+          >Player Application</a
+        >
+        <a
+          href="/assets/2024-swg-major-sponsor-application-package.pdf"
+          class="btn btn-dark"
+          target="_blank"
+          >Major Sponsor Application</a
+        >
+      </div>
+
+      <p>
+        <b>May 8</b>: Application window opens on-line and via mail.
+        <a href="mailto:www.bgcofcv.org">www.bgcofcv.org</a>
+      </p>
+      <p>
+        <b>May 24</b>: Applications are due by mail, email, or in person. The
+        window closes at 5:00 pm May 24th.
+      </p>
+      <p><b>June 3</b>: Invitations extended to players.</p>
+      <p><b>June 17</b>: Player confirmation and payment due.</p>
+      <p>
+        <b>June 18</b>: Invitations extended to wait-list applicants as spots
+        become available.
+      </p>
+      <p>
+        <b>September 19-22</b>: 2024 Southwestern Growers Invitational. Optional
+        practice round for tournament participants Thursday, September 19, 2024
       </p>
     </div>
     <div class="col-sm-12">
