Update swg event

--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -147,6 +147,11 @@ hideTitle: true
       </div>
 
       <p>
+        $1400 per two-man team, $700 per player Additional ways to support and
+        sponsorship opportunities available. See application for more details.
+      </p>
+
+      <p>
         <b>May 8</b>: Application window opens on-line and via mail.
         <a href="mailto:www.bgcofcv.org">www.bgcofcv.org</a>
       </p>
