--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -127,25 +127,6 @@ hideTitle: true
         <a href="tel:1-760-836-1160">(760)-836-1160</a>
       </h4>
       {%- endcomment -%}
-
-      <div
-        class="d-flex flex-column flex-sm-row justify-content-center pb-5"
-        style="gap: 1rem"
-      >
-        <a
-          href="/assets/2024-swg-player-application-packet.pdf"
-          class="btn btn-dark"
-          target="_blank"
-          >Player Application</a
-        >
-        <a
-          href="/assets/2024-swg-major-sponsor-application-package.pdf"
-          class="btn btn-dark"
-          target="_blank"
-          >Major Sponsor Application</a
-        >
-      </div>
-
       <p>
         $1400 per two-man team, $700 per player Additional ways to support and
         sponsorship opportunities available. See application for more details.
@@ -202,6 +183,12 @@ hideTitle: true
         >
       </div>
       {% endcomment %}
+    </div>
+    <div class="col-sm-12">
+      <img
+        class="img-fluid w-100"
+        src="/assets/images/schedule-of-events-sgg-2024.jpg"
+      />
     </div>
     {%- comment -%}
     <div class="col-sm-12">
