--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -118,6 +118,18 @@ show: true
 hideTitle: true
 ---
 
+<section class="container py-5">
+  <div class="row">
+    <div class="col-sm-12">
+      <a href="/assets/car-drawing-purchase-form.pdf" target="_blank">
+        <img
+          class="img-fluid w-100"
+          src="/assets/images/car-drawing-deets-2024.png"
+        />
+      </a>
+    </div>
+  </div>
+</section>
 <section class="container">
   <div class="row">
     <div class="col-sm-12">
@@ -203,6 +215,7 @@ hideTitle: true
     {%- endcomment -%}
   </div>
 </section>
+
 {% comment %}
 <section class="container">
   <div class="row">
