--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -42,16 +42,18 @@ permalink: index.html
     rel="noopener"
     role="button" class="call-to-action shadow btn btn-secondary px-5 py-4 text-white btn-lg mx-auto">DONATE NOW</a>
 </section>
-{%- comment -%}<section class="container py-5">
+<section class="container py-5">
   <div class="row">
     <div class="col-sm-12">
+        <a href="/assets/car-drawing-purchase-form.pdf" target="_blank">
       <img
         class="img-fluid w-100"
-        src="/assets/images/events/save-the-date-grand-auction-2024.jpg"
+        src="/assets/images/car-drawing-deets-2024.png"
       />
+      </a>
     </div>
   </div>
-</section> {%- endcomment -%}
+</section>
 <section class="py-5">
     <div class="container d-flex justify-content-center">
         <div class="row">
@@ -157,6 +159,26 @@ permalink: index.html
             <p class="pb-3">An organization driven by its mission and vision.</p>
             <p class="pb-3">Hope and opportunity.</p>
             </blockquote>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="py-5 bg-light">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h2 class="h4 text-center">
+                    Download the 2024 Parent Handbook
+                </h2>
+                <div class="d-flex flex-sm-row flex-column justify-content-center py-3">
+                    <a
+                        href="/assets/parent-handbook-2024.pdf"
+                        target="_blank"
+                        rel="noopener"
+                        class="my-1 mx-0 mx-sm-2 btn btn-secondary btn-lg text-uppercase"
+                        > Download</a
+                    >
+                </div>
             </div>
         </div>
     </div>
