Update home page

--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -43,6 +43,11 @@ permalink: index.html
     role="button" class="call-to-action shadow btn btn-secondary px-5 py-4 text-white btn-lg mx-auto">DONATE NOW</a>
 </section>
 <section class="container py-5">
+    <div class="d-flex justify-content-center align-items-center"> 
+    <a class="btn btn-primary btn-lg" href="/assets/car-drawing-purchase-form.pdf" target="_blank">
+        Download Purchase Form
+    </a>
+    </div>
   <div class="row">
     <div class="col-sm-12">
         <a href="/assets/car-drawing-purchase-form.pdf" target="_blank">
