--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -133,13 +133,15 @@ hideTitle: true
 <section class="container py-5">
   <div class="row">
     <div class="col-sm-12">
-      <p>Need help booking a hotel room?</p>
-      <a
-        class="btn btn-primary btn-lg mx-1 text-uppercase my-1 w-100"
-        href="https://reservations.arestravel.com/hotel/list/20318?Search%5BhotelRegion%5D=i6692&Search%5BcheckInDate%5D=09%2F19%2F2024&Search%5BcheckOutDate%5D=09%2F23%2F2024&Search%5BroomOccupancies%5D%5B0%5D%5BnumberOfAdults%5D=1&Search%5BroomOccupancies%5D%5B0%5D%5BnumberOfChildren%5D=0&Search%5BkeywordSearch%5D=&Search%5Bsort%5D=&Search%5BstarRating%5D=&Search%5BlowPrice%5D=&Search%5BhighPrice%5D=&Search%5Bsearch%5D=&customNavLink=0&Search%5Bnear%5D=&Search%5Blatitude%5D=&Search%5Blongitude%5D=&Search%5BlocationSearch%5D=&Search%5BpoiDistance%5D=15"
-        target="_blank"
-        >Check Hotel Availability</a
-      >
+      <p class="h2 text-center">Need help booking a hotel room?</p>
+      <div class="d-flex justify-content-center">
+        <a
+          class="btn btn-primary btn-lg mx-1 text-uppercase my-1 w-100"
+          href="https://reservations.arestravel.com/hotel/list/20318?Search%5BhotelRegion%5D=i6692&Search%5BcheckInDate%5D=09%2F19%2F2024&Search%5BcheckOutDate%5D=09%2F23%2F2024&Search%5BroomOccupancies%5D%5B0%5D%5BnumberOfAdults%5D=1&Search%5BroomOccupancies%5D%5B0%5D%5BnumberOfChildren%5D=0&Search%5BkeywordSearch%5D=&Search%5Bsort%5D=&Search%5BstarRating%5D=&Search%5BlowPrice%5D=&Search%5BhighPrice%5D=&Search%5Bsearch%5D=&customNavLink=0&Search%5Bnear%5D=&Search%5Blatitude%5D=&Search%5Blongitude%5D=&Search%5BlocationSearch%5D=&Search%5BpoiDistance%5D=15"
+          target="_blank"
+          >Check Hotel Availability</a
+        >
+      </div>
     </div>
   </div>
 </section>
