Update presidents circle info image

--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -48,7 +48,7 @@ permalink: index.html
         <a href="{{ site.data.global.donateUrl }}"" target="_blank">
       <img
         class="img-fluid w-100"
-        src="/assets/images/presidents-circle-donate-info.png"
+        src="/assets/images/presidents-circle-donate-info.jpg"
       />
       </a>
     </div>
