Update auction info

--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -55,19 +55,12 @@ permalink: index.html
   </div>
 </section>
 <section class="container py-5">
-    <div class="d-flex justify-content-center align-items-center"> 
-    <a class="btn btn-primary btn-lg" href="/assets/car-drawing-purchase-form.pdf" target="_blank">
-        Download Purchase Form
-    </a>
-    </div>
   <div class="row">
     <div class="col-sm-12">
-        <a href="/assets/car-drawing-purchase-form.pdf" target="_blank">
       <img
         class="img-fluid w-100"
-        src="/assets/images/car-drawing-deets-2024.png"
+        src="/assets/images/auction-2025-save-the-date.jpg"
       />
-      </a>
     </div>
   </div>
 </section>
