--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -2,7 +2,7 @@
 layout: events-layout
 title: Grand Auction 2025
 description: Save the Date!
-image: /assets/images/logo3.jpg
+image: /assets/images/grand-auction-2025.png
 start_date: 2025-03-08
 end_date: null
 contact:
@@ -12,9 +12,9 @@ contact:
     extension: 105
     number: (760)-836-1160
   title: Director of Special Events
-# callToAction:
-#  text: Register Now
-#  url: https://secure.maestroweb.com/Default.aspx?OrgID=1648
+callToAction:
+  text: Register Now
+  url: https://secure.maestroweb.com/Default.aspx?OrgID=1648
 time: null
 location: Hyatt Regency Indian Wells Resort & Spa
 address: null
