Add donation packet pdf

--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -39,6 +39,16 @@ permalink: /events/grand-auction-2025
     </div>
   </div>
 </section>
+<section>
+  <a
+    class="btn btn-primary btn-lg btn-block"
+    href="/assets/2025-auction-donation-packet.pdf"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    Download donation packet
+  </a>
+</section>
 
 {% comment %}
 <section class="py-5">
