Fix button layout

--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -40,14 +40,18 @@ permalink: /events/grand-auction-2025
   </div>
 </section>
 <section>
-  <a
-    class="btn btn-primary btn-lg btn-block"
-    href="/assets/2025-auction-donation-packet.pdf"
-    target="_blank"
-    rel="noopener noreferrer"
-  >
-    Download donation packet
-  </a>
+  <div class="container">
+    <div class="row d-flex flex-sm-row flex-column justify-content-center py-3">
+      <a
+        class="btn btn-primary btn-lg"
+        href="/assets/2025-auction-donation-packet.pdf"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Download donation packet
+      </a>
+    </div>
+  </div>
 </section>
 
 {% comment %}
